fix: Further fix for letters being cut off on Form components in certain scenarios

--- a/src/components/input/input.mat.styl
+++ b/src/components/input/input.mat.styl
@@ -30,10 +30,9 @@
   &:invalid
     box-shadow inherit
 
-input, textarea
-  &.q-input-target
-    line-height 19px
-    outline 0
+.q-input-target
+  line-height 19px
+  outline 0
 .q-input-chips
   min-height 36px !important
 
